# ubuntu-config

./: .vimrc  README.md  README1.md  _gvimrc  _vimrc  tex.md  vimrc
example/: CMakeLists.txt  test.cpp
